--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,7 @@
 [build]
+  command = "hugo --minify"
   publish = "public"
-  command = "hugo --minify --verbose"
+
 [context.production.environment]
-  
+  HUGO_VERSION = "0.114.3"
+  HUGO_EXTENDED = "true"
