--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseURL = "https://fireguides.netlify.app/"
 title = "Fireguides"
-theme = "your-theme"   # keep whatever you’re using
+theme = "ananke"   # keep whatever you’re using
 languageCode = "en-us"
 
 [menu]
