Fix theme comment formatting in config.toml

--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseURL = "https://fireguides.netlify.app/"
 title = "Fireguides"
-theme = "ananke"   # keep whatever you’re using
+   # keep whatever you’re using
 languageCode = "en-us"
 [params]
   custom_css = ["css/custom.css"]
